<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".Login">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="20sp">

        <TextView
            android:id="@+id/app_name"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="#da5289"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/login"
            android:layout_marginTop="15dp"/>

        //Correo electrónico
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/CorreoLogin"
                android:hint="@string/CorreoLogin"
                android:textColorHint="#fff"
                android:background="#e5c8d4"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/user_ico"
                android:drawablePadding="5dp"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        //Contraseña
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:passwordToggleEnabled="true">//Ocultar contraseña

            <EditText
                android:id="@+id/PasswordLogin"
                android:hint="@string/PasswordLogin"
                android:textColorHint="#fff"
                android:background="#e5c8d4"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/pass_ico"
                android:drawablePadding="5dp"
                android:importantForAutofill="no" />

        </com.google.android.material.textfield.TextInputLayout>

        //BOTÓN INGRESAR
        <Button
            android:id="@+id/INGRESAR"
            android:background="@drawable/boton_personalizado"
            android:textColor="#fff"
            android:layout_marginTop="15dp"
            android:text="@string/INGRESAR"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>